--- a/www/index.html
+++ b/www/index.html
@@ -6,6 +6,7 @@
     <meta charset="utf-8" />
 
     <title>Voice Assistant</title>
+    <link rel="shortcut icon" href="assets/img/logo.ico" type="image/x-icon">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="stylesheet" href="style.css">
@@ -46,6 +47,7 @@
     <script src="http://jschr.github.io/textillate/jquery.textillate.js"></script>
 
     <script src="main.js"></script>
+    <script src="/eel.js"></script>
 
 </body>
 
