--- a/www/index.html
+++ b/www/index.html
@@ -11,6 +11,8 @@
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="assets/vendors/texllate/texllate/animate.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
+
     <!-- Particle js -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/modernizr/2.8.3/modernizr.min.js"
         type="text/javascript"></script>
@@ -18,33 +20,70 @@
 </head>
 
 <body>
-    <section id="oval" class="mb-4">
-        <div class="row">
-            <div class="col-md-1"></div>
-            <div class="col-md-10">
-                <div class="d-flex justify-content-center align-items-center" style="height: 80vh">
-                    <canvas id="canvasOne" width="700" height="420" style="position: absolute;"></canvas>
-                    <div id="jarvis-hood">
-                        <div class="square">
-                            <span class="circle"></span>
-                            <span class="circle"></span>
-                            <span class="circle"></span>
+    <div class="container">
+        <section id="oval" class="mb-4">
+            <div class="row">
+                <div class="col-md-1"></div>
+                <div class="col-md-10">
+                    <div class="d-flex justify-content-center align-items-center" style="height: 80vh">
+                        <canvas id="canvasOne" width="700" height="420" style="position: absolute;"></canvas>
+                        <div id="jarvis-hood">
+                            <div class="square">
+                                <span class="circle"></span>
+                                <span class="circle"></span>
+                                <span class="circle"></span>
+                            </div>
+                        </div>
+                    </div>
+                    <h5 class="text-light text text-center">Ask me anything</h5>
+                    <div class="col-md-12 mt-4 pt-4">
+                        <div class="text-center">
+                            <div id="text-input" class="d-flex">
+                                <input type="text" class="input-field" name="chatbox" id="chatbox"
+                                    placeholder="type here">
+                                <button id="micbtn" class="glow-on-hover"><i class="bi bi-mic"></i></button>
+                                <button id="chatbtn" class="glow-on-hover"><i class="bi bi-chat-left-dots"></i></button>
+                                <button id="settingsbtn" class="glow-on-hover"><i class="bi bi-gear"></i></button>
+                            </div>
                         </div>
                     </div>
                 </div>
-                <h5 class="text-light text text-center">Ask me anything</h5>
+                <div class="col-md-1"></div>
             </div>
-            <div class="col-md-1"></div>
-        </div>
-    </section>
+        </section>
+        <section id="siri-wave" class="mb-4" hidden>
+            <div class="container">
+                <div class="row">
+                    <div class="col-md-12">
+                        <div class="d-flex justify-content-center align-items-center" style="height: 100vh">
+                            <div>
+                                <p class="text-start text-light mb-4 siri-message">Lorem ipsum dolor sit amet,
+                                    consectetur adipisicing
+                                    elit. Sunt commodi perferendis,
+                                    esse
+                                    quibusdam nulla dicta ratione sint magni harum beatae itaque. Voluptatem soluta
+                                    obcaecati ad repellendus vero, consequatur dicta accusamus!</p>
+                                <div id="siri-container"></div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+    </div>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.4/jquery.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
         crossorigin="anonymous"></script>
+    <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js'></script>
+    <script src='https://ajax.googleapis.com/ajax/libs/jqueryui/1.11.2/jquery-ui.min.js'></script>
     <script src="script.js"></script>
+    <script src="controller.js"></script>
     <script src="assets/vendors/texllate/texllate/jquery.fittext.js"></script>
     <script src="assets/vendors/texllate/texllate/jquery.lettering.js"></script>
     <script src="http://jschr.github.io/textillate/jquery.textillate.js"></script>
+    <script src="https://unpkg.com/siriwave/dist/siriwave.umd.min.js"></script>
+
 
     <script src="main.js"></script>
     <script src="/eel.js"></script>
