--- a/www/index.html
+++ b/www/index.html
@@ -44,6 +44,7 @@
                                 <button id="micbtn" class="glow-on-hover"><i class="bi bi-mic"></i></button>
                                 <button id="chatbtn" class="glow-on-hover"><i class="bi bi-chat-left-dots"></i></button>
                                 <button id="settingsbtn" class="glow-on-hover"><i class="bi bi-gear"></i></button>
+                                <button id="send-btn" class="glow-on-hover" hidden><i class="bi bi-send"></i></button>
                             </div>
                         </div>
                     </div>
