--- a/www/index.html
+++ b/www/index.html
@@ -42,7 +42,9 @@
                                 <input type="text" class="input-field" name="chatbox" id="chatbox"
                                     placeholder="type here">
                                 <button id="micbtn" class="glow-on-hover"><i class="bi bi-mic"></i></button>
-                                <button id="chatbtn" class="glow-on-hover"><i class="bi bi-chat-left-dots"></i></button>
+                                <button id="chatbtn" class="glow-on-hover" data-bs-toggle="offcanvas"
+                                    data-bs-target="#offcanvasScrolling" aria-controls="offcanvasScrolling"><i
+                                        class="bi bi-chat-left-dots"></i></button>
                                 <button id="settingsbtn" class="glow-on-hover"><i class="bi bi-gear"></i></button>
                                 <button id="send-btn" class="glow-on-hover" hidden><i class="bi bi-send"></i></button>
                             </div>
@@ -72,6 +74,18 @@
             </div>
         </section>
     </div>
+    <div class="offcanvas offcanvas-start chat-canvas" data-bs-scroll="true" data-bs-backdrop="false" tabindex="-1"
+        id="offcanvasScrolling" aria-labelledby="offcanvasScrollingLabel">
+        <div class="offcanvas-header">
+            <h5 class="offcanvas-title text-white" id="offcanvasScrollingLabel">Chats</h5>
+            <button type="button" class="btn-close text-reset" data-bs-dismiss="offcanvas" aria-label="Close"></button>
+        </div>
+        <div id="chat-canvas-body" class="offcanvas-body">
+            <!-- Chatting code here -->
+
+        </div>
+    </div>
+
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.4/jquery.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
