initial message changed

--- a/www/index.html
+++ b/www/index.html
@@ -60,12 +60,7 @@
                     <div class="col-md-12">
                         <div class="d-flex justify-content-center align-items-center" style="height: 100vh">
                             <div>
-                                <p class="text-start text-light mb-4 siri-message">Lorem ipsum dolor sit amet,
-                                    consectetur adipisicing
-                                    elit. Sunt commodi perferendis,
-                                    esse
-                                    quibusdam nulla dicta ratione sint magni harum beatae itaque. Voluptatem soluta
-                                    obcaecati ad repellendus vero, consequatur dicta accusamus!</p>
+                                <p class="text-start text-light mb-4 siri-message">Hi, how can I help you?</p>
                                 <div id="siri-container"></div>
                             </div>
                         </div>
